--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   display: inline-block;
   justify-content: space-around;
   margin-left: 30px; 
-  margin-top: 20px ;
+  margin-top: 30px ;
   background-color:#0583D2;
   padding: 10px;
   border-radius: 10px;
@@ -50,4 +50,15 @@ body {
    font-family: 'Raleway',sans-serif;
    font-size: 18px; font-weight: 500;
     line-height: 32px; margin: 0 0 24px; 
+}
+
+.dataContainer
+{
+  max-width: 80%;
+  background-color: #B8E3FF;
+  justify-content: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-bottom: 20px;
+  border-radius: 20px;
 }
