--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,17 @@ body {
   padding-bottom: 20px;
   border-radius: 20px;
 }
+
+.btn
+{
+  margin: 30px;
+  background-color: #0583D2;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+
+}
