--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   justify-content: space-around;
   margin-left: 30px; 
   margin-top: 30px ;
-  background-color:#B8E3FF;
+  background-color:#880808;
   padding: 10px;
   border-radius: 10px;
 
@@ -42,7 +42,7 @@ body {
 
 .valueColor
 {
-  color: #0583D2;
+  color: #f2f2f2;
 }
 
 .textSizeFont
@@ -54,6 +54,10 @@ body {
 
 .dataContainer
 {
+  background-image: url("wave.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   max-width: 80%;
   background-color: #1e1e1e;
   justify-content: center;
@@ -66,10 +70,10 @@ body {
 .btn
 {
   margin: 30px;
-  background-color:  #B8E3FF;
+  background-color:  #880808;
   border: none;
   border-radius: 10px;
-  color: white;
+  color: #f2f2f2;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
