--- a/src/index.css
+++ b/src/index.css
@@ -21,19 +21,25 @@ body {
   background-color: #ddd;
   color: black;
 }
-
-.formatData 
+ 
+.formatData  
 {
+ 
+  background-image: url("inside.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   display: inline-block;
   justify-content: space-around;
   margin-left: 30px; 
   margin-top: 30px ;
-  background-color:#880808;
   padding: 10px;
   border-radius: 10px;
 
-
 }
+
+
 
 .topnav a.active {
   background-color: #04AA6D;
@@ -42,6 +48,7 @@ body {
 
 .valueColor
 {
+  opacity: 1 !important;
   color: #f2f2f2;
 }
 
@@ -70,7 +77,10 @@ body {
 .btn
 {
   margin: 30px;
-  background-color:  #880808;
+  background-image: url("inside.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: none;
   border-radius: 10px;
   color: #f2f2f2;
@@ -95,4 +105,15 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.formLayout 
+{
+  border: 2px solid #51bfce;
+  border-radius: 10px;
+  padding: 10px;
+  justify-content: center;
+  width: 60%; 
+  margin-left: 20%;
+  margin-right: 20%;
 }
