--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   border: none;
-  border-radius: 10px;
+  border-radius: 4px;
   color: #f2f2f2;
   padding: 15px 32px;
   text-align: center;
@@ -117,3 +117,23 @@ body {
   margin-left: 20%;
   margin-right: 20%;
 }
+
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  color: white;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
